--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@tanstack/react-query": "^5.17.1",
     "@tanstack/react-query-devtools": "^5.17.1",
     "axios": "^1.6.3",
-    "date-fns": "^3.0.6",
+    "date-fns": "^3.2.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "npm-run-all": "^4.1.5",
     "protected-route-react": "^1.0.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.3.1",
