--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-scrollbars-custom": "^4.1.1",
+    "socket.io-client": "^4.7.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
